tests/snapshots/test_uigen_signal_callback__if_else_complete.snap
---
source: tests/test_uigen_signal_callback.rs
expression: ui_support_h
---
#pragma once
#include "ui_mytype.h"

namespace UiSupport {
class MyType
{
public:
    MyType(QCheckBox *root, Ui::MyType *ui): root_(root), ui_(ui) {}

    void setup()
    {
        this->setupCheckBoxText();
        this->updateCheckBoxText();
    }

private:
    enum class BindingIndex : unsigned {
        CheckBoxText,
    };

    void setupCheckBoxText()
    {
        QObject::connect(this->root_, QOverload<bool>::of(&QAbstractButton::toggled), this->root_, [this]() { this->updateCheckBoxText(); });
    }

    void updateCheckBoxText()
    {
#ifndef QT_NO_DEBUG
        constexpr unsigned index = static_cast<unsigned>(BindingIndex::CheckBoxText);
        Q_ASSERT_X(!(this->bindingGuard_[index >> 5] & (1U << (index & 0x1f))), __func__, "binding loop detected");
        this->bindingGuard_[index >> 5] |= (1U << (index & 0x1f));
#endif
        this->root_->setText(this->evalCheckBoxText());
#ifndef QT_NO_DEBUG
        this->bindingGuard_[index >> 5] &= ~(1U << (index & 0x1f));
#endif
    }

    QString evalCheckBoxText()
    {
        bool a0;
    b0:
        a0 = this->root_->isChecked();
        if (a0)
            goto b1;
        else
            goto b2;
    b1:
        return QStringLiteral("checked");
    b2:
        return QStringLiteral("unchecked");
    b3:
        Q_UNREACHABLE();
    }

    struct PropertyObserver
    {
        QMetaObject::Connection connection;
        QObject *object = nullptr;
    };

    QCheckBox *const root_;
    Ui::MyType *const ui_;
#ifndef QT_NO_DEBUG
    quint32 bindingGuard_[1] = {0};
#endif

};
} // namespace UiSupport

