tests/snapshots/test_uigen_signal_callback__variant_cast.snap
---
source: tests/test_uigen_signal_callback.rs
expression: ui_support_h
---
#pragma once
#include "ui_mytype.h"

namespace UiSupport {
class MyType
{
public:
    MyType(QComboBox *root, Ui::MyType *ui): root_(root), ui_(ui) {}

    void setup()
    {
        this->setupComboBoxCurrentTextChanged();
    }

private:
    enum class BindingIndex : unsigned {
    };

    void setupComboBoxCurrentTextChanged()
    {
        QObject::connect(this->root_, &QComboBox::currentTextChanged, this->root_, [this]() { this->onComboBoxCurrentTextChanged(); });
    }

    void onComboBoxCurrentTextChanged()
    {
        QVariant a0;
        QString a1;
    b0:
        a0 = this->root_->currentData();
        a1 = a0.value<QString>();
        this->root_->setWindowTitle(a1);
        return;
    }

    struct PropertyObserver
    {
        QMetaObject::Connection connection;
        QObject *object = nullptr;
    };

    QComboBox *const root_;
    Ui::MyType *const ui_;

};
} // namespace UiSupport

